Fixed issues that arose with tf-22. Order Id's now increment and order details total issue is fixed.

--- a/FowlerSite/Views/Store/StoreCheckout.cshtml
+++ b/FowlerSite/Views/Store/StoreCheckout.cshtml
@@ -263,8 +263,8 @@
                 <!-- END: Order Products -->
 
                 <div class="nk-gap-2"></div>
-                <button class="nk-btn nk-btn-rounded nk-btn-color-main-1" asp-action="PlaceOrder">Place Order</button>
-                        <input class="nk-btn nk-btn-rounded nk-btn-color-main-1" type="submit" value="Place Order">
+                @*<button class="nk-btn nk-btn-rounded nk-btn-color-main-1" asp-action="PlaceOrder">Place Order</button>*@
+                <input class="nk-btn nk-btn-rounded nk-btn-color-main-1" type="submit" value="Place Order">
 
                     </div>
                 }
