--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-grid.css">
     <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-reboot.css">
     <link rel="stylesheet" href="~/assets/vendor/bootstrap/dist/css/bootstrap.min.css">
+
+    <!-- Parsley -->
     <link rel="stylesheet" href="~/assets/css/parsley.css">
 
     <!-- FontAwesome -->
