--- a/FowlerSite/wwwroot/assets/css/parsley.css
+++ b/FowlerSite/wwwroot/assets/css/parsley.css
@@ -1,9 +1,9 @@
 input.parsley-success,
 select.parsley-success,
 textarea.parsley-success {
-  color: #468847;
-  background-color: #DFF0D8;
-  border: 1px solid #D6E9C6;
+    color: #0b2e03;
+    background-color: #9fff8a;
+    border: 1px solid #348222;
 }
 
 input.parsley-error,
@@ -15,18 +15,18 @@ textarea.parsley-error {
 }
 
 .parsley-errors-list {
-  margin: 2px 0 3px;
-  padding: 0;
-  list-style-type: none;
-  font-size: 0.9em;
-  line-height: 0.9em;
-  opacity: 0;
-  color: #B94A48;
-
-  transition: all .3s ease-in;
-  -o-transition: all .3s ease-in;
-  -moz-transition: all .3s ease-in;
-  -webkit-transition: all .3s ease-in;
+    display: none;
+    margin: 15px 0;
+    padding: 0;
+    list-style-type: none;
+    font-size: 0.9em;
+    line-height: 0.9em;
+    opacity: 0;
+    color: #B94A48;
+    transition: all .3s ease-in;
+    -o-transition: all .3s ease-in;
+    -moz-transition: all .3s ease-in;
+    -webkit-transition: all .3s ease-in;
 }
 
 .parsley-errors-list.filled {
